--- a/Ant/Ant/Ant.vcxproj
+++ b/Ant/Ant/Ant.vcxproj
@@ -142,14 +142,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
+    <ClInclude Include="Affordance.h" />
+    <ClInclude Include="Agent.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="Geometry.h" />
+    <ClInclude Include="Grid.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Affordance.cpp" />
+    <ClCompile Include="Agent.cpp" />
     <ClCompile Include="Ant.cpp" />
+    <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Geometry.cpp" />
+    <ClCompile Include="Grid.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
